# nestalgic

./: Cargo.toml  README.md  default.nix  flake.nix  release.nix  shell.nix
nestalgic/: Cargo.toml  README.md
nestalgic/src/: cpu_bus.rs  lib.rs  nes_bus.rs
nestalgic/src/cartridge/: mapper.rs  mod.rs  nrom.rs
nestalgic/src/mapper/: mod.rs  nrom.rs
nestalgic/src/rp2c02/: mod.rs  pixel.rs  ppuctrl.rs  ppumask.rs  ppustatus.rs  texture.rs
nestalgic_mos6502/: Cargo.toml  README.md
nestalgic_mos6502/src/: lib.rs
nestalgic_mos6502/src/mos6502/: addressable.rs  addressing_mode.rs  bus.rs  dma.rs  error.rs  instruction.rs  interrupt.rs  mod.rs  opcode.rs  register.rs  status.rs
nestalgic_mos6502/tests/: nestest.rs
nestalgic_rom/: Cargo.toml
nestalgic_rom/src/: lib.rs
nestalgic_rom/src/nesrom/: error.rs  file_type.rs  header.rs  mirroring_type.rs  mod.rs
nestalgic_rom/tests/: read_tests.rs
nestalgic_ui/: Cargo.toml
nestalgic_ui/src/: gui.rs  main.rs  nes_chr_debug.rs  nes_debug.rs  nes_display.rs  nes_ppu_window.rs  nes_texture_debug.rs  nes_texture_window.rs  nestalgic_ui.rs  ui.rs  world.rs
nestalgic_ui/src/ext/: imgui_wgpu.rs  mod.rs
nix/: sources.json
src/: ticker.rs
src/mos6502/: addressing_mode.rs  bus.rs  error.rs  instruction.rs  mod.rs  opcode.rs  register.rs
