[package]
name = "nestalgic_ui"
version = "0.1.0"
authors = ["Jake Woods <jake@jakewoods.net>"]
edition = "2018"

[dependencies]
anyhow = "1.0.31"
env_logger = "0.7.1"
log = { version = "0.4.8", features = [ "release_max_level_warn" ] }
pixels = { git = "https://github.com/parasyte/pixels.git", rev = "9bfed17a7f51733f9042b3b524405229c628003b" }
imgui = "0.7.0"
imgui-wgpu = "0.14.0"
imgui-winit-support = "0.7.0"
winit = "0.24.0"
winit_input_helper = "0.9.0"
wgpu = "0.7.1"

nestalgic = { path = "../nestalgic" }
