cargo-features = ["edition2021"]

[package]
name = "nestalgic_ui"
version = "0.1.0"
authors = ["Jake Woods <jake@jakewoods.net>"]
edition = "2021"

[dependencies]
anyhow = "1.0.31"
env_logger = "0.7.1"
log = { version = "0.4.8", features = [ "release_max_level_warn" ] }
pixels = { version = "0.8.0" }
imgui = "0.8.0"
imgui-wgpu = "0.18.0"
imgui-winit-support = "0.8.0"
winit = "0.25.0"
winit_input_helper = "0.10.0"
wgpu = "0.11.1"

nestalgic = { path = "../nestalgic" }
